src/test/compile-fail/nontrivial-fn-arg-pattern-in-pure-fn.rs
pure fn call_first((x, _y): (&fn(), &fn())) {
    x();    //~ ERROR access to impure function prohibited in pure context
}

fn main() {}

